crates/wac-parser/tests/resolution/fail/missing-ok-result-type.wac
package test:comp;

import x: interface {
    f: func() -> result<_>;
};

let i = new foo:bar { x };
